# roms-rs

./: .gitignore  3D_TODO.md  ACCURACY.md  CLAUDE.md  Cargo.toml  OUTLINE.md  PERFORMANCE.md  README.md  RESEARCH.md  TODO.md
benches/: flux_bench.rs  limiter_bench.rs  rhs_computation_bench.rs  rhs_swe_2d_bench.rs  source_term_bench.rs  time_stepping_bench.rs
examples/: advection_1d.rs  froya_real_data.rs  high_res_benchmark.rs  norwegian_fjord.rs  profile_cpu.rs  profile_gpu.rs  quick_profile.rs  test_norkyst.rs  tide_gauge_validation.rs
scripts/: flamegraph.sh  perf-stat.sh  samply.sh  visualize_vtu.py
src/: lib.rs
src/analysis/: adcp.rs  harmonic.rs  metrics.rs  mod.rs  stability.rs  tide_gauge.rs
src/basis/: mod.rs  vandermonde.rs  vandermonde_2d.rs
src/boundary/: bathymetry_validation.rs  boundary_2d.rs  chapman.rs  mod.rs  multi_bc_2d.rs  nesting_bc.rs  ocean_nesting.rs  radiation.rs  reflective.rs  tidal.rs  tidal_config.rs  tst_obc.rs
src/equations/: advection.rs  advection_2d.rs  equation_of_state.rs  mod.rs  shallow_water.rs  shallow_water_2d.rs
src/flux/: hll.rs  mod.rs  roe.rs  swe_2d.rs  tracer_2d.rs  traits.rs  upwind.rs
src/io/: adcp_reader.rs  coastline.rs  constituent_reader.rs  geotiff.rs  mod.rs  netcdf_io.rs  projection.rs  tide_gauge_reader.rs  timeseries_reader.rs  vtk.rs
src/mesh/: bathymetry_2d.rs  gmsh.rs  land_mask.rs  mesh1d.rs  mesh2d.rs  mod.rs
src/operators/: differentiation.rs  geometric.rs  lift.rs  mass.rs  mod.rs  operators_2d.rs
src/physics/: builder.rs  mod.rs  traits.rs
src/polynomial/: legendre.rs  legendre_2d.rs  mod.rs  nodes.rs
src/simulation/: mod.rs  runner.rs
src/solver/: dg1d.rs  dg2d.rs  diagnostics.rs  limiters.rs  limiters_swe_2d.rs  limiters_tracer_2d.rs  mod.rs  rhs.rs  rhs_advection_2d.rs  rhs_swe_2d.rs  rhs_system.rs  rhs_tracer_2d.rs  simd_kernels.rs  simd_swe_2d.rs  state.rs  state_2d.rs  tracer_state.rs  wetting_drying.rs
src/source/: atmospheric_pressure.rs  baroclinic.rs  bathymetry.rs  bathymetry_source_2d.rs  coriolis_2d.rs  friction.rs  friction_2d.rs  hydrostatic_reconstruction_2d.rs  mod.rs  source_2d.rs  sponge_2d.rs  strait_friction.rs  tidal_potential.rs  tracer_source_2d.rs  wind_stress.rs
src/time/: burn_ssp_rk3.rs  coupled_swe_tracer.rs  integrator.rs  mod.rs  ssp_rk3.rs  ssp_rk3_2d.rs  ssp_rk3_swe.rs  ssp_rk3_swe_2d.rs
tests/: convergence_test.rs  harmonic_analysis_test.rs  swe_2d_test.rs  tide_gauge_validation_test.rs  tracer_2d_test.rs  validation_2d.rs
(+74 files in other folders)
